@@ -39,6 +39,7 @@
 <p>2012-11-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/utility.c (IsGlob): IsGlob can be more efficient.</li>
 <li>magick/floats.c: Use compile-time selection of endian-specific
 code rather than run-time.  Fix cast warning with 64-bit builds.</li>
 </ul>
